frontend/test/should_fail/computations_no_proc_method.gm
node class N
{
	function bar() : int
	{
		foo();
		return(42);
	}
}
